[package]
name = "ode_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix = { git = "https://github.com/Ryo-sunken/matrix-rs.git" }
csv = "1.3.0"
num-traits = "0.2.17"

[features]
default = []
rayon = [ "matrix/rayon" ]